tests/errors/e_tstring_unclosed5.pyx
# mode: error

t'{'

_ERRORS = """
3:4: Unclosed string literal
"""
